fix screen size on mobile screen

--- a/template_dev/src/shared/all.styl
+++ b/template_dev/src/shared/all.styl
@@ -53,12 +53,10 @@ body
 #footer
     background-color: #333;
     @media (max-width: 767px)
-        /* Lastly, apply responsive CSS fixes as necessary */
-        margin-left: -20px;
-        margin-right: -20px;
-        padding-left: 20px;
-        padding-right: 20px;
-
+        padding-left: 0px;
+        padding-right: 0px;
     p
         margin-top: 20px;
         color: #CCC;
+        @media (max-width: 767px)
+            text-align: center
